--- a/flight-booking/server/src/FlightBooking.API/appsettings.json
+++ b/flight-booking/server/src/FlightBooking.API/appsettings.json
@@ -9,5 +9,9 @@
   "MongoDB": {
     "ConnectionURI": "mongodb://addm2019:wXSCzPr4zXR55r4g@ac-t6jcjxl-shard-00-00.23ppwpl.mongodb.net:27017,ac-t6jcjxl-shard-00-01.23ppwpl.mongodb.net:27017,ac-t6jcjxl-shard-00-02.23ppwpl.mongodb.net:27017/?ssl=true&replicaSet=atlas-5ub3xb-shard-0&authSource=admin&retryWrites=true&w=majority",
     "DatabaseName": "FlightBookingDB"
+  },
+  "JWT": {
+    "ValidIssuer": "http://localhost:50000",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   }
 }
