--- a/flight-booking/client/flight-booking/package.json
+++ b/flight-booking/client/flight-booking/package.json
@@ -11,13 +11,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.2.4",
     "@angular/common": "^15.2.4",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.0.0",
+    "@angular/material": "^15.2.4",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
