--- a/flight-booking/client/flight-booking/package.json
+++ b/flight-booking/client/flight-booking/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "@cloudinary/ng": "^1.11.2",
+    "@cloudinary/url-gen": "^1.9.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
