--- a/flight-booking/client/flight-booking/package.json
+++ b/flight-booking/client/flight-booking/package.json
@@ -25,6 +25,7 @@
     "@cloudinary/ng": "^1.11.2",
     "@cloudinary/url-gen": "^1.9.2",
     "angular-uploader": "^8.16.0",
+    "bootstrap": "^5.2.3",
     "cloudinary": "^1.35.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
