--- a/accommodation-booking/server/src/Services/Accomodation/src/main/resources/application.properties
+++ b/accommodation-booking/server/src/Services/Accomodation/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.datasource.url=jdbc:mysql://accomodation.db:4000
+#spring.datasource.url=jdbc:mysql://accomodation.db:4000/db_accomodation
 spring.datasource.url=jdbc:mysql://localhost:3306/db_accomodation
 spring.datasource.username=root
 spring.datasource.password=root
