--- a/accommodation-booking/server/src/Services/Accomodation/pom.xml
+++ b/accommodation-booking/server/src/Services/Accomodation/pom.xml
@@ -111,6 +111,16 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+                	<mainClass>accomodation.App</mainClass>
+            	</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+            	</executions>
 			</plugin>
 		</plugins>
         <finalName>${project.artifactId}</finalName>
