--- a/accommodation-booking/server/src/Services/Identity/Identity.API/appsettings.json
+++ b/accommodation-booking/server/src/Services/Identity/Identity.API/appsettings.json
@@ -11,6 +11,6 @@
   },
   "Jwt": {
     "Issuer": "identity-api",
-    "Secret": "Ym9va2luZy1hcHAtcHJpdmF0ZS1rZXk=",
+    "Secret": "Ym9va2luZy1hcHAtcHJpdmF0ZS1rZXk="
   }
 }
