--- a/accommodation-booking/server/src/Services/Accomodation/Dockerfile
+++ b/accommodation-booking/server/src/Services/Accomodation/Dockerfile
@@ -1,17 +1,17 @@
-FROM maven:3.8-openjdk-17 as maven
+# Use a Maven builder image
+FROM maven:3.8.3-openjdk-11 as builder
 WORKDIR /app
-EXPOSE 80
 
-COPY ./pom.xml .
+# Copy the pom.xml file and download dependencies
+COPY ./src/Services/Accomodation/pom.xml ./pom.xml
 RUN mvn dependency:go-offline
-COPY ./src ./src
-RUN mvn package -DskipTests=true
-WORKDIR /app/target/dependency
-RUN jar -xf ../accomodation.jar
 
-FROM ibm-semeru-runtimes:open-17-jre-centos7
-ARG DEPENDENCY=/app/target/dependency
-COPY --from=maven ${DEPENDENCY}/BOOT-INF/lib /app/lib
-COPY --from=maven ${DEPENDENCY}/META-INF /app/META-INF
-COPY --from=maven ${DEPENDENCY}/BOOT-INF/classes /app
-CMD java -server -Xmx1024m -Xss1024k -XX:MaxMetaspaceSize=135m -XX:CompressedClassSpaceSize=28m -XX:ReservedCodeCacheSize=13m -XX:+IdleTuningGcOnIdle -Xtune:virtualized -cp app:app/lib/* com.xws.accomodation.App
+# Copy the src folder and build the project
+COPY ./src/Services/Accomodation/src ./src
+RUN mvn package -DskipTests
+
+# Use an OpenJDK image for running the application
+FROM openjdk:11-jre-slim
+WORKDIR /app
+COPY --from=builder /app/target/accomodation.jar ./app.jar
+ENTRYPOINT ["java", "-jar", "app.jar"]
