--- a/accommodation-booking/server/src/Services/Accomodation/src/main/resources/application.properties
+++ b/accommodation-booking/server/src/Services/Accomodation/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-#spring.datasource.url=jdbc:mysql://accomodation.db:4000/db_accomodation
-spring.datasource.url=jdbc:mysql://localhost:3306/db_accomodation
+spring.datasource.url=jdbc:mysql://accomodation.db:3306/db_accomodation
 spring.datasource.username=root
 spring.datasource.password=root
 
 app.name=accomodation
 app.secret-key=secret
-server.port = 9000
+server.port = 8080
 
 sping.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.show_sql=true
