--- a/accommodation-booking/server/src/Services/Accomodation/pom.xml
+++ b/accommodation-booking/server/src/Services/Accomodation/pom.xml
@@ -55,6 +55,12 @@
 			<version>0.9.1</version>
 		</dependency>
 		
+		<dependency>   
+			<groupId>com.nimbusds</groupId>   
+			<artifactId>nimbus-jose-jwt</artifactId>   
+			<version>9.16.1</version> 
+		</dependency>
+		
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
