--- a/accommodation-booking/server/docker-compose.yml
+++ b/accommodation-booking/server/docker-compose.yml
@@ -36,7 +36,19 @@ services:
     ports:
      - 12000:80
 
+  reservations.db:
+    image: postgres:alpine
+    restart: always
+    environment:
+     POSTGRES_USERNAME: postgres
+     POSTGRES_PASSWORD: 123456
+    volumes:
+     - reservations-data:/var/lib/postgresql/data
+    ports:
+     - 22000:5432
+
 volumes:
   identity-data:
+  reservations-data:
 
 
