--- a/accommodation-booking/server/src/Services/Reservations/Reservations.API/appsettings.json
+++ b/accommodation-booking/server/src/Services/Reservations/Reservations.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"Reservations": "Host=localhost;Database=reservations;User Id=postgres;Password=123456"
+    "Reservations": "Server=host.docker.internal;Port=22000;Database=reservations;Username=postgres;Password=123456"
+  }
 }
