--- a/accommodation-booking/server/src/Services/Identity/Identity.API/Identity.API.csproj
+++ b/accommodation-booking/server/src/Services/Identity/Identity.API/Identity.API.csproj
@@ -11,6 +11,13 @@
 
   <ItemGroup>
     <PackageReference Include="FluentResults" Version="3.15.2" />
+    <PackageReference Include="Google.Protobuf" Version="3.23.0" />
+    <PackageReference Include="Grpc.Core" Version="2.46.6" />
+    <PackageReference Include="Grpc.Net.ClientFactory" Version="2.53.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.54.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.16" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.16">
@@ -30,6 +37,7 @@
 
   <ItemGroup>
     <Folder Include="Data\Migrations\" />
+	  <Protobuf Include="..\..\Reservations\Reservations.API\Proto\reservations.proto" GrpcServices="Client" />
   </ItemGroup>
 
 </Project>
