--- a/accommodation-booking/server/src/Services/Accomodation/pom.xml
+++ b/accommodation-booking/server/src/Services/Accomodation/pom.xml
@@ -141,7 +141,11 @@
 			<groupId>io.grpc</groupId>
 			<artifactId>grpc-stub</artifactId>
 		</dependency>
-
+		<dependency>
+		    <groupId>com.cloudinary</groupId>
+		    <artifactId>cloudinary-http42</artifactId>
+		    <version>1.1.3</version> 
+		</dependency>
 	</dependencies>
 	
 	<build>
