--- a/accommodation-booking/server/src/Services/Reservations/Reservations.API/Reservations.API.csproj
+++ b/accommodation-booking/server/src/Services/Reservations/Reservations.API/Reservations.API.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Google.Protobuf" Version="3.23.0" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.53.0" />
+    <PackageReference Include="Grpc.Net.ClientFactory" Version="2.53.0" />
     <PackageReference Include="Grpc.Tools" Version="2.54.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -42,6 +43,7 @@
   <ItemGroup>
     <Folder Include="Infrastructure\Persistence\Migrations\" />
 	  <Protobuf Include="Proto\reservations.proto" GrpcServices="Server" />
+	  <Protobuf Include="..\..\Search\grpc_services\accommodation-search.proto" GrpcServices="Client" />
   </ItemGroup>
 
 </Project>
