Implement .NET event bus

--- a/accommodation-booking/server/src/Services/Identity/Identity.API/appsettings.json
+++ b/accommodation-booking/server/src/Services/Identity/Identity.API/appsettings.json
@@ -12,5 +12,8 @@
   "Jwt": {
     "Issuer": "identity-api",
     "Secret": "Ym9va2luZy1hcHAtcHJpdmF0ZS1rZXk="
+  },
+  "NATS": {
+    "Url": "nats://host.docker.internal:4222"
   }
 }
