--- a/accommodation-booking/server/docker-compose.yml
+++ b/accommodation-booking/server/docker-compose.yml
@@ -83,6 +83,13 @@ services:
       - 13000:5000
       - 13001:5001
 
+  nats:
+    image: 'nats:latest'
+    expose:
+        - "4222"
+    ports:
+        - "4222:4222"
+
 volumes:
   identity-data:
   accomodation-data:
