Implement event bus spring boot

--- a/accommodation-booking/server/src/Services/Accomodation/src/main/resources/application.properties
+++ b/accommodation-booking/server/src/Services/Accomodation/src/main/resources/application.properties
@@ -15,5 +15,7 @@ spring.jpa.hibernate.connection.CharSet=utf8
 spring.jpa.hibernate.connection.characterEncoding=utf8
 spring.jpa.hibernate.connection.useUnicode=true
 
+nats.serverUrl=nats://host.docker.internal:4222
+
 spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
