--- a/accommodation-booking/server/src/Services/Accomodation/pom.xml
+++ b/accommodation-booking/server/src/Services/Accomodation/pom.xml
@@ -146,6 +146,12 @@
 		    <artifactId>cloudinary-http42</artifactId>
 		    <version>1.1.3</version> 
 		</dependency>
+
+		<dependency>
+			<groupId>io.nats</groupId>
+			<artifactId>jnats</artifactId>
+			<version>2.16.11</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
