--- a/accommodation-booking/server/docker-compose.override.yml
+++ b/accommodation-booking/server/docker-compose.override.yml
@@ -31,3 +31,10 @@ services:
     ports:
       - "80"
 
+
+  notifications.signalr:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "80"
+
