--- a/accommodation-booking/client/accommodation-booking/package.json
+++ b/accommodation-booking/client/accommodation-booking/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "@auth0/angular-jwt": "^5.1.2",
+    "@microsoft/signalr": "^7.0.7",
     "bootstrap": "^5.2.3",
     "ngx-bootstrap": "^10.2.0",
     "rxjs": "^7.6.0",
