--- a/accommodation-booking/server/docker-compose.yml
+++ b/accommodation-booking/server/docker-compose.yml
@@ -72,17 +72,6 @@ services:
     ports:
      - 22000:5432
 
-  accommodation-search.api:
-    image: accommodation-search.api
-    build:
-      context: .
-      dockerfile: src/Services/Search/Dockerfile
-    environment:
-      - MONGODB_URI=mongodb+srv://addm2019:Z522zXN2eBo7xDzM@cluster0.23ppwpl.mongodb.net/search_db?retryWrites=true&w=majority
-    ports:
-      - 13000:5000
-      - 13001:5001
-
   search.api:
     image: ${DOCKER_REGISTRY-}searchapi
     build:
@@ -110,10 +99,19 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
     restart: always
 
+  notifications.signalr:
+    image: ${DOCKER_REGISTRY-}notificationssignalr
+    build:
+      context: .
+      dockerfile: src/Services/Notifications/Notifications.SignalR/Dockerfile
+    ports:
+     - 20000:80
+
 volumes:
   identity-data:
   accomodation-data:
     name: mysql-database
   reservations-data:
   mongo_data:
+
 
