--- a/accommodation-booking/server/docker-compose.override.yml
+++ b/accommodation-booking/server/docker-compose.override.yml
@@ -24,3 +24,10 @@ services:
     ports:
       - "80"
 
+
+  ratings.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "80"
+
