impelemented events and grpc aggregation

--- a/accommodation-booking/server/src/Services/Ratings.API/appsettings.json
+++ b/accommodation-booking/server/src/Services/Ratings.API/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     //"Ratings": "Host=localhost;Database=ratings;User Id=postgres;Password=123456"
     "Ratings": "Server=host.docker.internal;Port=23000;Database=ratings;Username=postgres;Password=123456"
+  },
+  "NATS": {
+    "Url": "nats://host.docker.internal:4222"
   }
 }
