--- a/accommodation-booking/server/src/Services/Identity/Identity.API/Identity.API.csproj
+++ b/accommodation-booking/server/src/Services/Identity/Identity.API/Identity.API.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="FluentResults" Version="3.15.2" />
     <PackageReference Include="Google.Protobuf" Version="3.23.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.53.0" />
     <PackageReference Include="Grpc.Core" Version="2.46.6" />
     <PackageReference Include="Grpc.Net.ClientFactory" Version="2.53.0" />
     <PackageReference Include="Grpc.Tools" Version="2.54.0">
@@ -41,6 +42,10 @@
     <ProjectReference Include="..\..\..\EventBus.NET\EventBus.NET.csproj" />
 	  <Protobuf Include="..\..\Reservations\Reservations.API\Proto\reservations.proto" GrpcServices="Client" />
 	  <Protobuf Include="..\..\Search\grpc_services\accommodation-search.proto" GrpcServices="Client" />
+	  <Protobuf Include="Proto\identity.proto" GrpcServices="Server" />
+  </ItemGroup>
+
+  <ItemGroup>
   </ItemGroup>
 
 </Project>
