--- a/accommodation-booking/server/src/Services/RatingsLibrary/RatingsLibrary.csproj
+++ b/accommodation-booking/server/src/Services/RatingsLibrary/RatingsLibrary.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\EventBus.NET\EventBus.NET.csproj" />
   </ItemGroup>
 
 </Project>
