--- a/accommodation-booking/server/src/Services/Search/Search.API/Search.API.csproj
+++ b/accommodation-booking/server/src/Services/Search/Search.API/Search.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -10,6 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.23.3" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.54.0" />
+    <PackageReference Include="Grpc.Net.ClientFactory" Version="2.54.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.54.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.19.2" />
     <PackageReference Include="NATS.Client" Version="1.0.4" />
@@ -18,6 +25,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\EventBus.NET\EventBus.NET.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+	  <Protobuf Include="Proto\accommodation-search.proto" GrpcServices="Server" />
   </ItemGroup>
 
 </Project>
