--- a/accommodation-booking/server/docker-compose.yml
+++ b/accommodation-booking/server/docker-compose.yml
@@ -1,13 +1,23 @@
 version: '3.4'
 
+x-logging: &fluent-bit
+ driver: fluentd
+ options:
+  fluentd-address: localhost:24224
+  
+
 services:
   web.bff:
     image: ${DOCKER_REGISTRY-}webbff
+    environment:
+      - FLUENT_LOGGING=reservations.api
     build:
       context: .
       dockerfile: src/ApiGateway/Web.Bff/Dockerfile
     ports:
      - 10000:80
+    logging: 
+     *fluent-bit
 
   identity.api:
     image: ${DOCKER_REGISTRY-}identityapi
@@ -17,6 +27,7 @@ services:
     ports:
     - 11000:80
     - 11001:5000
+    logging: *fluent-bit
 
   identity.db:
     image: postgres:alpine
@@ -39,6 +50,8 @@ services:
     ports:
      - 12000:80
      - 12001:5000
+    logging: 
+     *fluent-bit
 
   accomodation.api:
     image: ${DOCKER_REGISTRY-}accomodationapi
@@ -49,6 +62,8 @@ services:
       - accomodation.db
     ports:
      - 9000:8080
+    logging: 
+     *fluent-bit
   
   accomodation.db:
     image: mysql
@@ -81,6 +96,9 @@ services:
     ports:
      - 14000:80
      - 14001:5000
+    logging: 
+     *fluent-bit
+
   nats:
     image: 'nats:latest'
     expose:
@@ -160,6 +178,38 @@ services:
       dockerfile: src/Services/AccommodationRecommendation/RecommendationSystem.API/Dockerfile
     ports:
      - 19000:80
+
+  loki:
+    container_name: loki
+    image: grafana/loki:master
+    ports:
+       - 3100:3100
+    command: -config.file=/etc/loki/local-config.yaml
+    healthcheck:
+        test: wget -q --tries=1 -O- http://localhost:3100/ready 
+        interval: 3s
+        timeout: 3s
+        retries: 10
+        start_period: 10s
+
+  grafana:
+    container_name: grafana
+    image: grafana/grafana:master
+    ports:
+      - "3000:3000"
+    depends_on:
+        loki:
+            condition: service_healthy
+
+  fluentbit:
+    image: grafana/fluent-bit-plugin-loki:latest
+    environment:
+     - LOKI_URL=http://host.docker.internal:3100/loki/api/v1/push
+    volumes:
+      - ./fluent-bit.conf:/fluent-bit/etc/fluent-bit.conf
+    ports:
+      - "24224:24224"
+      - "24224:24224/udp"
 
 volumes:
   identity-data:
