--- a/accommodation-booking/server/src/Services/Accomodation/pom.xml
+++ b/accommodation-booking/server/src/Services/Accomodation/pom.xml
@@ -152,6 +152,12 @@
 			<artifactId>jnats</artifactId>
 			<version>2.16.11</version>
 		</dependency>
+
+		<dependency>
+			<groupId>io.opentracing.contrib</groupId>
+			<artifactId>opentracing-spring-jaeger-cloud-starter</artifactId>
+			<version>3.3.1</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
