--- a/accommodation-booking/server/docker-compose.yml
+++ b/accommodation-booking/server/docker-compose.yml
@@ -211,6 +211,13 @@ services:
       - "24224:24224"
       - "24224:24224/udp"
 
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - "16686:16686"
+      - "14268:14268"
+      - "6831:6831/udp"
+
 volumes:
   identity-data:
   accomodation-data:
