--- a/accommodation-booking/server/src/Services/Accomodation/src/main/resources/application.properties
+++ b/accommodation-booking/server/src/Services/Accomodation/src/main/resources/application.properties
@@ -19,3 +19,9 @@ nats.serverUrl=nats://host.docker.internal:4222
 
 spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
+
+# JAEGER
+spring.application.name=accommodation-api
+opentracing.jaeger.udp-sender.host=host.docker.internal
+opentracing.jaeger.udp-sender.port=6831
+opentracing.jaeger.log-spans=true
