--- a/accommodation-booking/server/prometheus/prometheus.yml
+++ b/accommodation-booking/server/prometheus/prometheus.yml
@@ -17,40 +17,9 @@
       static_configs:
         - targets: ['localhost:9090']
 
-    - job_name: 'web.bff'
-      metrics_path: '/metrics'
+    - job_name: 'servers'
       static_configs:
-        - targets: ['web.bff:80']
-
-    - job_name: 'identity.api'
-      metrics_path: '/metrics'
-      static_configs:
-        - targets: ['identity.api:80']
-
-    - job_name: 'reservations.api'
-      metrics_path: '/metrics'
-      static_configs:
-        - targets: ['reservations.api:80']
-
-    - job_name: 'search.api'
-      metrics_path: '/metrics'
-      static_configs:
-        - targets: ['search.api:80']
-
-    - job_name: 'notifications.signalr'
-      metrics_path: '/metrics'
-      static_configs:
-        - targets: ['notifications.signalr:80']
-
-    - job_name: 'ratings.api'
-      metrics_path: '/metrics'
-      static_configs:
-        - targets: ['ratings.api:80']
-
-    - job_name: 'recommendationsystem.api'
-      metrics_path: '/metrics'
-      static_configs:
-        - targets: ['recommendationsystem.api:80']
+        - targets: ['web.bff:80', 'identity.api:80', 'reservations.api:80', 'search.api:80', 'notifications.signalr:80', 'ratings.api:80', 'recommendationsystem.api:80']
 
     - job_name: 'node_exporter'
       static_configs:
